Refactor database scripts and schemas; replace create-db script with TypeScript version, add setup script, and enhance various SQL table definitions with indexing for improved query performance

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
     "db:gen": "drizzle-kit generate",
-    "db:create": "node -r dotenv/config scripts/create-db.mjs",
+    "db:create": "tsx scripts/create-db.ts",
     "db:seeds": "tsx scripts/seed.ts",
+    "db:setup": "tsx scripts/setup.ts",
     "db:init": "node -r dotenv/config scripts/init-db.mjs"
   },
   "dependencies": {
