fix: Remove postinstall script to prevent redundant database setup
- Remove the `postinstall` script from `package.json` to prevent redundant database setup, as the setup is already handled during deployment.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "db:create": "tsx scripts/create-db.ts",
     "db:seeds": "tsx scripts/seed.ts",
     "db:setup": "tsx scripts/setup.ts",
-    "db:init": "node -r dotenv/config scripts/init-db.mjs",
-    "postinstall": "npm run db:setup"
+    "db:init": "node -r dotenv/config scripts/init-db.mjs"
   },
   "dependencies": {
     "@auth/core": "^0.37.2",
