--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "framer-motion": "^11.3.13",
     "html-entities": "^2.5.2",
     "html-react-parser": "^5.2.0",
+    "jsdom": "^26.1.0",
     "just-is-empty": "^3.4.1",
     "lowlight": "^3.1.0",
     "marked": "^15.0.7",
