--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
+    "db:gen": "drizzle-kit generate",
+    "db:create": "tsx scripts/create-db.ts",
+    "db:seeds": "tsx scripts/seed.ts",
+    "db:setup": "tsx scripts/setup.ts",
+    "db:init": "node -r dotenv/config scripts/init-db.mjs"
   },
   "dependencies": {
     "@auth/core": "^0.37.2",
