refactor: Update environment configuration and database setup scripts
- Remove Cloudinary configuration from .env.example for clarity.
- Refactor next.config.mjs to streamline site URL handling based on environment.
- Update db:setup script in package.json to chain database operations for improved workflow.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:gen": "drizzle-kit generate",
     "db:create": "tsx scripts/create-db.ts",
     "db:seeds": "tsx scripts/seed.ts",
-    "db:setup": "tsx scripts/setup.ts",
+    "db:setup": "npm run db:create && npm run db:migrate && npm run db:seeds",
     "db:init": "node -r dotenv/config scripts/init-db.mjs"
   },
   "dependencies": {
