--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@green-auth/snowflake-unique-id": "^1.0.1",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@react-email/components": "^0.0.29",
     "@tanstack/react-query": "^5.51.18",
     "@tanstack/react-table": "^8.20.6",
@@ -51,6 +52,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.1",
@@ -82,6 +84,7 @@
     "slugify": "^1.6.6",
     "svix": "^1.60.0",
     "swiper": "^11.1.15",
+    "tailwind-merge": "^3.3.0",
     "tippy.js": "^6.3.7",
     "turndown": "^7.2.0",
     "ua-parser-js": "2.0.0-rc.1",
