--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.1",
+    "feed": "^5.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.13",
     "html-entities": "^2.5.2",
